3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Implement EVENT_TELL.
 plugins/cfpython/cfpython.c
 plugins/template/plugin_template.c
 server/c_chat.c plugins.c
Nicolas Weeger 2007-04-21

server/apply.c: potions of life now won't affect player if their level is too low.
Nicolas Weeger 2007-04-20

 server/attack.c: enable plugins to prevent attacks.
Nicolas Weeger 2007-04-18

server/plugins.c: fix wrong return type.
Nicolas Weeger 2007-04-18

plugins/cfpython/cfpython_object.c: don't insert hooks in 'more' parts of items.
plugins/cfpython/cfpython.c: player list (GetPlayers()), activate 'clock' event.
---
Give access to player list to plugins. Fix mishandling of multipart objects.
 include/plugin.h
 server/plugins.c
Nicolas Weeger 2007-04-17

common/region.c: don't crash if no regions file found.
Nicolas Weeger 2007-04-15

server/swap.c: fix crash with map reset (parameter is map, not path).
Nicolas Weeger 2007-04-15

Merge all plugin changes from trunk.
This includes defining sstring (can be useful anyway), and generate_random_map
 definition.
 server/plugins.c server.c
 include/plugin.h sproto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/cfpython/cfpython.c cfpython_map.c cfpython_object.c
 plugins/cfpython/include/cfpython.h cfpython_object_private.h
  cfpython_proto.h cfpython_map_private.h
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim.h cfanim_proto.h
 random_maps/random_map.c rproto.h standalone.c
Nicolas Weeger 2007-04-15

Correctly clear god information.
 common/holy.c
Nicolas Weeger 2007-04-14

Remove unused godlink::pantheon field.
 common/holy.c
 include/god.h
Nicolas Weeger 2007-04-14
